Colaboratory を使用して作成しました

--- a/ts_learntypescript.ipynb
+++ b/ts_learntypescript.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "ts_learntypescript.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyNBcidMiqlD2kMb6Cay6u7C",
+      "authorship_tag": "ABX9TyOl7dgimXpoN14Yg3xISPJ/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +48,7 @@
       "metadata": {
         "id": "cvDmmwL1W8Wl"
       },
-      "execution_count": 41,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -87,7 +86,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -110,7 +109,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -138,7 +137,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -161,7 +160,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -190,7 +189,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,7 +213,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -415,16 +414,17 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "40781da7-0404-444a-cb9e-e68a8e42a8e1"
+        "outputId": "f9ffe3c9-8d70-4dce-de49-0bd367ef33e7"
       },
       "source": [
         "# 配列 array に型が混在できる\n",
         "%%writefile temp.ts\n",
         "let myNameArray = ['Chris', 'Bob', 'Jim', 37];\n",
+        "console.log(myNameArray)\n",
         "console.log(myNameArray[0]);\n",
         "console.log(myNameArray[3]);"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -442,17 +442,18 @@
       ],
       "metadata": {
         "id": "A0wTpmAp3iUb",
-        "outputId": "80eeebe7-4dfd-41c7-e046-cba5b81b24b1",
+        "outputId": "9034cf48-1407-4af6-d1a4-982ba248bf7f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "[ \u001b[32m'Chris'\u001b[39m, \u001b[32m'Bob'\u001b[39m, \u001b[32m'Jim'\u001b[39m, \u001b[33m37\u001b[39m ]\n",
             "Chris\n",
             "\u001b[33m37\u001b[39m\n"
           ]
@@ -615,7 +616,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# オブジェクト 連想配列のこと\n",
+        "# オブジェクト 連想配列のこと => 配列もオブジェクトだった\n",
         "# let dog = { name : 'ポチ', breed : 'ダルメシアン' };\n",
         "# `typeof()` というので型を調べられるらしいのでホントにオブジェクトというのか確認する。\n",
         "%%writefile temp.ts\n",
