Colaboratory を使用して作成しました

--- a/ts_learntypescript.ipynb
+++ b/ts_learntypescript.ipynb
@@ -6,7 +6,7 @@
       "name": "ts_learntypescript.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMwHnDAmL4CBpov+zzklVWI",
+      "authorship_tag": "ABX9TyNK1YVzxaRsG4CBEYwT8qSk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -622,7 +622,8 @@
       "source": [
         "# オブジェクト 連想配列のこと => 配列もオブジェクトだった\n",
         "# let dog = { name : 'ポチ', breed : 'ダルメシアン' };\n",
-        "# `typeof()` というので型を調べられるらしいのでホントにオブジェクトというのか確認する。\n",
+        "# `typeof()` というので型を調べられるらしいのでホントにオブジェクトというのか確認する\n",
+        "# 配列とオブジェクトの違い、と言う質問が違うと言うことか\n",
         "%%writefile temp.ts\n",
         "let myNameArray = ['Chris', 'Bob', 'Jim', 37];\n",
         "let myNumberArray = [10, 15, 40];\n",
@@ -797,22 +798,21 @@
       "source": [
         "# 文字列の長さは length プロパティ\n",
         "%%writefile temp.ts\n",
-        "import * as fs from \"fs\";\n",
-        "const inputs = fs.readFileSync(\"/dev/stdin\", \"utf8\");\n",
-        "let line = inputs.split('\\n');\n",
-        "let str = line[0];\n",
+        "const input : string = require('fs').readFileSync(\"/dev/stdin\", \"utf8\");\n",
+        "let args : string[] = input.trim().split(/[\\n\\s,;.]+/)\n",
+        "let str = args[0]\n",
         "console.log(\"長さは \" + str.length) \n",
         "console.log(\"最後の文字は \" + str[str.length - 1]) // str[-1] は使えない\n",
         "console.log(\"z の位置は \" + str.indexOf(\"z\")) // ない時に -1 になる。と言うことはそのままでは真偽値には使えない"
       ],
       "metadata": {
         "id": "HY9vGBSlTX2V",
-        "outputId": "e594240b-3556-4dc0-8ae8-bdfe38c44fcd",
+        "outputId": "1f09848c-3d91-4e2b-cba6-471654b84c4d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -830,12 +830,12 @@
       ],
       "metadata": {
         "id": "GzO9ZzoZTePW",
-        "outputId": "8e17ab55-fd60-4a9f-efc5-1c45e1ebdcf6",
+        "outputId": "4a3f2c61-c85c-4363-b330-fa3d4ec15f05",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -847,6 +847,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# ちょっといまここ"
+      ],
+      "metadata": {
+        "id": "9VSV_l15fEAo"
+      }
     },
     {
       "cell_type": "code",
@@ -863,21 +872,23 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
+      "source": [
+        "# 真偽値  \n",
+        "# JavaScript は以下以外はすべて true;  \n",
+        "\n",
+        "# ・数値 0、NaN  \n",
+        "# ・null  \n",
+        "# ・undifined  \n",
+        "# ・空文字列  \n",
+        "\n",
+        "# ということは、`[]`、`{}` は true。"
+      ],
       "metadata": {
         "id": "1Oer_s5F_5Ml"
       },
-      "source": [
-        "真偽値  \n",
-        "JavaScript は以下以外はすべて true;  \n",
-        "\n",
-        "・数値 0、NaN  \n",
-        "・null  \n",
-        "・undifined  \n",
-        "・空文字列  \n",
-        "\n",
-        "ということは、`[]`、`{}` は true。"
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -936,6 +947,69 @@
             "Merry Christmas my love\n",
             "A happy Christmas to all the family\n",
             "You're all I want for Christmas\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# heredocument ヒアドキュメント\n",
+        "%%writefile temp.ts\n",
+        "const input : string = require('fs').readFileSync(\"/dev/stdin\", \"utf8\");\n",
+        "const heredoc = `\n",
+        "秋の日の\n",
+        "秋の田の\n",
+        "ヴィオロンの\n",
+        "かりほの庵の\n",
+        "`;\n",
+        "console.log(heredoc)\n",
+        "let args : string[] = heredoc.trim().split(/[\\n\\s,;.]+/)\n",
+        "console.log(args)"
+      ],
+      "metadata": {
+        "id": "r60b0Pgmgp4y",
+        "outputId": "b5677560-18d3-4f60-da59-0cb1be248b1f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.ts\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!tsc temp.ts; echo | node temp.js"
+      ],
+      "metadata": {
+        "id": "Z4KhEV_KhXGA",
+        "outputId": "5e2cca34-2729-4010-e853-c9086662d441",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "秋の日の\n",
+            "秋の田の\n",
+            "ヴィオロンの\n",
+            "かりほの庵の\n",
+            "\n",
+            "[ \u001b[32m'秋の日の'\u001b[39m, \u001b[32m'秋の田の'\u001b[39m, \u001b[32m'ヴィオロンの'\u001b[39m, \u001b[32m'かりほの庵の'\u001b[39m ]\n"
           ]
         }
       ]
