Colaboratory を使用して作成しました

--- a/ts_learntypescript.ipynb
+++ b/ts_learntypescript.ipynb
@@ -6,7 +6,7 @@
       "name": "ts_learntypescript.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNK1YVzxaRsG4CBEYwT8qSk",
+      "authorship_tag": "ABX9TyN8DsHl/su9HnSzMuEA6B/W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -400,15 +400,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "wACUtmbBfKUg"
-      }
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "Q-MXCqgvHntd",
@@ -750,16 +741,18 @@
         "const inputs = fs.readFileSync(\"/dev/stdin\", \"utf8\");\n",
         "let line = inputs.split('\\n');\n",
         "let number = Number(line[0]);\n",
-        "console.log(number ** 2) //=> 49"
+        "console.log(number ** 2) //=> 49\n",
+        "let number2 = Number(\"what?\") // ここでエラーにはならない\n",
+        "console.log(number2) //=>  NaN 数値ではない、と言う意味"
       ],
       "metadata": {
         "id": "poUWlVLIfxNt",
-        "outputId": "9e1540a4-212a-4294-d37a-9a17f9f14c17",
+        "outputId": "f40e2bca-5cf6-4ff1-cca6-69b5861dfcf5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -777,18 +770,19 @@
       ],
       "metadata": {
         "id": "yjT5sG7v_7ot",
-        "outputId": "9e1c7d4e-331b-46d4-95fa-3118c72108a2",
+        "outputId": "140a786c-9f5b-413b-b80c-7a8f06c821aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[33m49\u001b[39m\n"
+            "\u001b[33m49\u001b[39m\n",
+            "\u001b[33mNaN\u001b[39m\n"
           ]
         }
       ]
@@ -847,15 +841,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# ちょっといまここ"
-      ],
-      "metadata": {
-        "id": "9VSV_l15fEAo"
-      }
     },
     {
       "cell_type": "code",
@@ -968,11 +953,11 @@
         "console.log(args)"
       ],
       "metadata": {
-        "id": "r60b0Pgmgp4y",
-        "outputId": "b5677560-18d3-4f60-da59-0cb1be248b1f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "r60b0Pgmgp4y",
+        "outputId": "b5677560-18d3-4f60-da59-0cb1be248b1f"
       },
       "execution_count": 24,
       "outputs": [
@@ -991,11 +976,11 @@
         "!tsc temp.ts; echo | node temp.js"
       ],
       "metadata": {
-        "id": "Z4KhEV_KhXGA",
-        "outputId": "5e2cca34-2729-4010-e853-c9086662d441",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Z4KhEV_KhXGA",
+        "outputId": "5e2cca34-2729-4010-e853-c9086662d441"
       },
       "execution_count": 25,
       "outputs": [
@@ -1021,15 +1006,10 @@
         "# AtCoder Beginners Selection\n",
         "# a, b の積が偶数なら Even 奇数なら Odd と出力する\n",
         "%%writefile temp.ts\n",
-        "import * as fs from \"fs\";\n",
-        "const inputs : string = fs.readFileSync(\"/dev/stdin\", \"utf8\");\n",
-        "const args : number [] = inputs\n",
-        "   .split('\\n')[0]\n",
-        "   .split(' ')\n",
-        "   .map ((n) => Number(n));\n",
-        "\n",
-        "const a : number = args[0]\n",
-        "const b : number = args[1]\n",
+        "const input : string = require('fs').readFileSync(\"/dev/stdin\", \"utf8\");\n",
+        "let args : string[] = input.trim().split(/[\\n\\s,;.]+/)\n",
+        "const a : number = Number(args[0])\n",
+        "const b : number = Number(args[1])\n",
         "\n",
         "if ((a * b) % 2 === 0) {\n",
         "    console.log('Even');\n",
@@ -1039,12 +1019,12 @@
       ],
       "metadata": {
         "id": "Z1dr2uV-vVlB",
-        "outputId": "e7edb91d-c7d5-46f8-de52-20184bc20210",
+        "outputId": "5f02db1b-40ff-409c-9e08-4d98c8ccd77d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -1063,12 +1043,12 @@
       ],
       "metadata": {
         "id": "oiCIDrrgvVe1",
-        "outputId": "4e3fde32-2e06-441b-e48c-67cb41f75c67",
+        "outputId": "c61ff226-471a-460d-edc5-1bb01b62cd83",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -1081,14 +1061,26 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# ちょっといまここ"
+      ],
+      "metadata": {
+        "id": "9VSV_l15fEAo"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# 問題 A - Placing Marbles \n",
         "# AtCoder Beginners Selection\n",
         "# 3 つのマスからなるマス目。各マスには 0 か 1 が書かれている。\n",
         "# 1 の数を出力する\n",
-        "\n",
         "%%writefile temp.ts\n",
+        "const input : string = require('fs').readFileSync(\"/dev/stdin\", \"utf8\");\n",
+        "let args : string[] = input.trim().split(/[\\n\\s,;.]+/)\n",
+        "\n",
+        "\n",
         "import * as fs from \"fs\";\n",
         "const inputs : string = fs.readFileSync(\"/dev/stdin\", \"utf8\");\n",
         "const args : number [] = inputs\n",
