Colaboratory を使用して作成しました

--- a/ts_learntypescript.ipynb
+++ b/ts_learntypescript.ipynb
@@ -6,7 +6,7 @@
       "name": "ts_learntypescript.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN8DsHl/su9HnSzMuEA6B/W",
+      "authorship_tag": "ABX9TyOvPTcN0YVArVEQilq6iK5Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -416,7 +416,7 @@
         "console.log(myNameArray[0]);\n",
         "console.log(myNameArray[3]);"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -439,7 +439,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -573,7 +573,7 @@
         "let b = Array(3).map(x => Array(2).fill(0))  // Array(3) の後の fill(0) がないと空になってしまう\n",
         "console.log(b)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -596,7 +596,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -633,7 +633,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -656,7 +656,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -752,7 +752,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -775,7 +775,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -806,7 +806,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -829,7 +829,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -959,7 +959,7 @@
         "id": "r60b0Pgmgp4y",
         "outputId": "b5677560-18d3-4f60-da59-0cb1be248b1f"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -982,7 +982,7 @@
         "id": "Z4KhEV_KhXGA",
         "outputId": "5e2cca34-2729-4010-e853-c9086662d441"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1024,7 +1024,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1048,7 +1048,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1061,15 +1061,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# ちょっといまここ"
-      ],
-      "metadata": {
-        "id": "9VSV_l15fEAo"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# 問題 A - Placing Marbles \n",
@@ -1079,26 +1070,19 @@
         "%%writefile temp.ts\n",
         "const input : string = require('fs').readFileSync(\"/dev/stdin\", \"utf8\");\n",
         "let args : string[] = input.trim().split(/[\\n\\s,;.]+/)\n",
-        "\n",
-        "\n",
-        "import * as fs from \"fs\";\n",
-        "const inputs : string = fs.readFileSync(\"/dev/stdin\", \"utf8\");\n",
-        "const args : number [] = inputs\n",
-        "   .split('\\n')[0]\n",
-        "   .split('')\n",
-        "   .map ((n) => Number(n));\n",
+        "let arg = args[0].split('').map((n) => Number(n))\n",
         "\n",
         "// sum 合計を算出する\n",
-        "console.log(args.reduce(function(a, b) { return a + b; }, 0))"
+        "console.log(arg.reduce(function(a, b) { return a + b; }, 0))"
       ],
       "metadata": {
-        "id": "5gaBMkwyyd56",
-        "outputId": "252844b0-db1a-49e5-a187-f07ed0905839",
+        "outputId": "a4b5b12e-e2d5-4c37-91b6-4b16d8d72b43",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XXmkrTY1Rm8I"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -1116,13 +1100,13 @@
         "!tsc temp.ts; echo 000 | node temp.js #=> 0"
       ],
       "metadata": {
-        "id": "t1MouOLAyd11",
-        "outputId": "8aa3d90a-d9a9-4bae-cdba-ea4a59bd00a9",
+        "outputId": "1e7c91b3-505b-453b-c6b5-641a7162ef9a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Uf0Z5eA4Rm8P"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -1197,27 +1181,33 @@
     {
       "cell_type": "code",
       "source": [
-        "# 問題 都市名\n",
+        "# 問題 都市名 別解\n",
         "# 最初を大文字に、それ以降を小文字にするのを関数化する\n",
         "%%writefile temp.ts\n",
         "let cities = ['lonDon', 'ManCHESTer', 'BiRmiNGHAM', 'liVERpoOL'];\n",
         "\n",
-        "let headCapElseLower = (city : string) : string => {\n",
+        "/ どちらでもオッケー\n",
+        "/*\n",
+        "let capitalize  = (city : string) : string => {\n",
         "    return city.toLowerCase().replace(city[0].toLowerCase(), city[0].toUpperCase())\n",
+        "}*/\n",
+        "\n",
+        "let capitalize  = (city : string) : string => {\n",
+        "    return city[0].toUpperCase() + city.slice(1).toLowerCase()\n",
         "}\n",
         "\n",
         "for (let i = 0; i < cities.length; i++) {\n",
-        "    console.log(headCapElseLower(cities[i]))\n",
+        "    console.log(capitalize(cities[i]))\n",
         "}"
       ],
       "metadata": {
         "id": "v9vzYlGw3ibT",
-        "outputId": "7333b2af-50fb-4209-b6a6-ad89e5f55197",
+        "outputId": "93cefa82-d84f-40f7-cacb-dbe35bbb49de",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -1235,12 +1225,12 @@
       ],
       "metadata": {
         "id": "mziDNDzH3iXL",
-        "outputId": "6c3520d1-e54f-42e0-b2d5-ec4c1ea03eba",
+        "outputId": "cef65ee0-012d-4b10-ca60-8a31cb44d131",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -2556,10 +2546,17 @@
         "# 4 5 6 8 10 #=> 0\n",
         "# 6 382253568 723152896 37802240 379425024 404894720 471526144 #=> 8\n",
         "%%writefile temp.ts\n",
-        "import * as fs from \"fs\";\n",
-        "const inputs = fs.readFileSync(\"/dev/stdin\", \"utf8\");\n",
-        "let args : string[] = inputs.split('\\n')[0].split(' ')[0];\n",
-        "console.log(\"Hello, \" + name)\n",
+        "\n",
+        "let countShifOnly = (a : number[]) : number {\n",
+        "\n",
+        "}\n",
+        "\n",
+        "const input : string = require('fs').readFileSync(\"/dev/stdin\", \"utf8\");\n",
+        "let args : string[] = input.trim().split(/[\\n\\s,;.]+/)\n",
+        "const N : number = Number(args[0])\n",
+        "let a : number[] = args.slice(1, N + 1).map((n) => Number(n))\n",
+        "\n",
+        "\n",
         "\n",
         "/*\n",
         "function main(input: string) {\n",
@@ -2578,21 +2575,48 @@
         "// main(require('fs').readFileSync('/dev/stdin', 'utf8'));"
       ],
       "metadata": {
-        "id": "FBvwsDIbREPO"
+        "id": "FBvwsDIbREPO",
+        "outputId": "ada1f63e-9dfd-4dd3-b706-8e7e033228c4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.ts\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "!tsc temp.ts; echo 3 8 12 40 | node temp.js\n",
+        "# 3 8 12 40 #=> 2\n",
+        "# 4 5 6 8 10 #=> 0\n",
+        "# 6 382253568 723152896 37802240 379425024 404894720 471526144 #=> 8"
       ],
       "metadata": {
-        "id": "WI8cy28cLMRE"
+        "id": "WI8cy28cLMRE",
+        "outputId": "2383c169-9902-4c97-8896-5c98cd149a00",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ \u001b[33m8\u001b[39m, \u001b[33m12\u001b[39m, \u001b[33m40\u001b[39m ]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2611,8 +2635,7 @@
         "id": "mHWP31WGtmTc"
       },
       "source": [
-        "\n",
-        "# いまここ\n"
+        "# EOF\n"
       ]
     }
   ]
