Colaboratory を使用して作成しました

--- a/ts_learntypescript.ipynb
+++ b/ts_learntypescript.ipynb
@@ -6,7 +6,7 @@
       "name": "ts_learntypescript.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMInZN4149yTje7Dw05SIRr",
+      "authorship_tag": "ABX9TyMre7fhlwlnmdzaxg4JiWTJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +49,7 @@
       "metadata": {
         "id": "cvDmmwL1W8Wl"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -58,14 +58,14 @@
         "\n",
         "javascript を学んでいて行き詰まってしまったので、typescript 経由で学べないか。 google colaboratory を利用できないか。 ということでこのファイルを作った。\n",
         "\n",
-        "* qiita AtCoder Beginners Selection 解答例【TypeScript】10問だしこれをやるか\n",
         "* https://colab.research.google.com/github/kalz2q/mycolabnotebooks/blob/master/javascript_aizuonline01.ipynb 過去に作成したもの\n",
         "* https://colab.research.google.com/github/kalz2q/mycolabnotebooks/blob/master/functionaljavascript.ipynb 過去に作成したもの\n",
         "---\n",
         "* learnjavascript.ipynb をコピペした => これを typescript 化する。=> 終了\n",
         "* https://typescriptbook.jp/ サバイバル TypeScript 良く書けている。日本語\n",
         "* https://www.typescripttutorial.net/ => あまり良くないチュートリアルだと思う\n",
-        "* mdm web docs javascript これはこれでいいのだが。英語"
+        "* mdm web docs javascript これはこれでいいのだが。英語\n",
+        "* qiita AtCoder Beginners Selection 解答例【TypeScript】10問だしこれをやるか"
       ],
       "metadata": {
         "id": "DbSqJQo1j15z"
@@ -2498,7 +2498,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2523,7 +2523,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2555,7 +2555,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2578,7 +2578,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2669,7 +2669,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2693,7 +2693,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2743,7 +2743,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2768,7 +2768,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2821,7 +2821,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2846,7 +2846,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2896,7 +2896,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2921,7 +2921,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2960,7 +2960,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2985,7 +2985,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3037,7 +3037,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3063,7 +3063,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3076,52 +3076,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "HX6cdlafwp0v"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "function main(input: string) {\n",
-        "  const reverse = (s: string) => {\n",
-        "    return s.split('').reverse().join('');\n",
-        "  };\n",
-        "\n",
-        "  const S: string = reverse(input.split('\\n')[0]);\n",
-        "\n",
-        "  const words: string[] = ['dream', 'dreamer', 'erase', 'eraser'].map(\n",
-        "    (word: string) => reverse(word)\n",
-        "  );\n",
-        "\n",
-        "  let index: number = 0;\n",
-        "\n",
-        "  while (true) {\n",
-        "    let w: string | undefined = words.find((word: string) => S.startsWith(word, index));\n",
-        "    if (!w) break;\n",
-        "    index += w.length;\n",
-        "  }\n",
-        "\n",
-        "  if (S.length === index) {\n",
-        "    console.log('YES');\n",
-        "  } else {\n",
-        "    console.log('NO');\n",
-        "  }\n",
-        "}\n",
-        "\n",
-        "main(require('fs').readFileSync('/dev/stdin', 'utf8'));"
-      ],
-      "metadata": {
-        "id": "c3KSWc7Ejnpr"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -3147,11 +3101,12 @@
         "\n",
         "let index: number = 0;\n",
         "while (true) {\n",
-        "    let w: string | undefined = words.find((word: string) => S.startsWith(word, index));\n",
+        "    let w: string | undefined = words.find((word: string) => str.startsWith(word, index));\n",
         "    if (!w) break;\n",
         "    index += w.length;\n",
         "}\n",
-        "if (str.length === index) {\n",
+        "\n",
+        "if (str.length == index) {\n",
         "    console.log('YES');\n",
         "} else {\n",
         "    console.log('NO');\n",
@@ -3159,12 +3114,12 @@
       ],
       "metadata": {
         "id": "IszczPCDjnvH",
-        "outputId": "5ec7a191-5f55-4cec-bb2b-f8fa1e8cd9dd",
+        "outputId": "b10a0faf-6a03-4697-c515-dbbe4fd11fb0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 96,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -3184,26 +3139,143 @@
       ],
       "metadata": {
         "id": "oUuKZL_zjqE3",
-        "outputId": "ce740abf-94ac-44b4-a1ec-9e230d4b9382",
+        "outputId": "00eec312-3e01-4832-9600-7467f9a01336",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 97,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[ \u001b[32m'maerd'\u001b[39m, \u001b[32m'remaerd'\u001b[39m, \u001b[32m'esare'\u001b[39m, \u001b[32m'resare'\u001b[39m ]\n",
-            "NO\n",
-            "[ \u001b[32m'maerd'\u001b[39m, \u001b[32m'remaerd'\u001b[39m, \u001b[32m'esare'\u001b[39m, \u001b[32m'resare'\u001b[39m ]\n",
-            "NO\n",
-            "[ \u001b[32m'maerd'\u001b[39m, \u001b[32m'remaerd'\u001b[39m, \u001b[32m'esare'\u001b[39m, \u001b[32m'resare'\u001b[39m ]\n",
+            "YES\n",
+            "YES\n",
             "NO\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題 C - Traveling\n",
+        "# 時刻 0 に 点 (0, 0) を出発し、 1 以上 N 以下の各 i に対し、時刻 t_i に 点 (x_i, y_i) を訪れる予定です\n",
+        "# 時刻 t に 点 (x, y) にいる時、 時刻 t+1 には 点 (x + 1, y), (x − 1, y), (x, y + 1), (x , y − 1) \n",
+        "# のうちいずれかに存在することができます。 \n",
+        "# この旅行プランが実行可能かどうか判定してください。\n",
+        "# 例\n",
+        "# 2\n",
+        "# 3 1 2\n",
+        "# 6 1 1\n",
+        "# => Yes\n",
+        "# 例えば、(0,0), (0,1), (1,1), (1,2), (1,1), (1,0), (1,1) と移動すればよい\n",
+        "# 1 2 100 100 #=> No\n",
+        "# 2 5 1 1 100 1 1 #=> No\n",
+        "%%writefile temp.ts\n",
+        "const input : string = require('fs').readFileSync(\"/dev/stdin\", \"utf8\");\n",
+        "let args : number[] = input.trim().split(/[\\n\\s,;.]+/).map((n) => Number(n))\n",
+        "const N = args[0]\n",
+        "\n",
+        "let list : number[][] = [[0,0,0]]\n",
+        "for (let i = 0; i < N; i++) {\n",
+        "    let t = args[3 * i +1]\n",
+        "    let x = args[3 * i + 2]\n",
+        "    let y = args[3 * i + 3]\n",
+        "    list.push([t, x, y]);\n",
+        "}\n",
+        "\n",
+        "let isPossible : boolean = true\n",
+        "for (var i = 0; i < list.length - 1 ; i++) {\n",
+        "    let dt = list[i + 1][0] - list[i][0];\n",
+        "    let dx = Math.abs(list[i + 1][1] - list[i][1]);\n",
+        "    let dy = Math.abs(list[i + 1][2] - list[i][2]);\n",
+        "\n",
+        "    let dis = dx + dy;\n",
+        "    if (dis > dt || dt % 2 != dis % 2) {\n",
+        "        console.log(\"No\");\n",
+        "        isPossible = false\n",
+        "        break;\n",
+        "    } \n",
+        "} \n",
+        "if (isPossible) console.log(\"Yes\")"
+      ],
+      "metadata": {
+        "id": "hRi3ynVADHJ1",
+        "outputId": "98007f45-67bc-4f39-81e2-11f0c4b35ec7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.ts\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!tsc temp.ts; echo 2 3 1 2 6 1 1 | node temp.js #=> Yes\n",
+        "!tsc temp.ts; echo 1 2 100 100 | node temp.js #=> No\n",
+        "!tsc temp.ts; echo 2 5 1 1 100 1 1 | node temp.js #=> No"
+      ],
+      "metadata": {
+        "id": "ROLBnVnaDHEZ",
+        "outputId": "9ac15c3e-4c2e-4f91-a075-df7b38e82b40",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Yes\n",
+            "No\n",
+            "No\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HX6cdlafwp0v"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "lhhJsfQ0PROq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "rUR5gFYbPRK8"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
